feat: add Docker Swarm configuration and Makefile for Docker build/push workflow
- Added a new `Makefile` for building and pushing Docker images:
  - Supports `build`, `push`, and `build-and-push` targets.
  - Requires `SERVICE` and `TAG` flags for flexibility.
- Updated `project/makefile`:
  - Included comments for Docker Swarm initialization and management commands.
- Added `swarm.yml` for Docker Swarm configuration:
  - Defined services: `broker-service`, `listener-service`, `authentication-service`, `logger-service`, `mailer-service`.
  - Added supporting containers: `rabbitmq`, `mailhog`, `mongo`, `postgres`.
  - Configured environment variables, ports, and deployment modes for each service.
- Updated `front-end/frontApp` binary with new changes.

--- a/project/makefile
+++ b/project/makefile
@@ -71,3 +71,9 @@ stop:
 	@echo "Stopping front end..."
 	@-pkill -SIGTERM -f "./${FRONT_END_BINARY}"
 	@echo "Stopped front end!"
+
+
+# docker swarm init
+# docker stack deploy -c swarm.yml myapp
+# docker service 
+# docker stack rm myapp
