feat: enhance front-end service and update broker configurations
- Updated `broker-service/cmd/api/main.go` to use port 8080 instead of 80.
- Integrated `embed` for templates in `front-end/cmd/web/main.go`.
- Added Dockerfile for front-end service.
- Included `frontEndApp` binary for front-end service.
- Updated `makefile` to support building the front-end binary for Linux.
- Modified `swarm.yml`:
  - Added front-end service configuration.
  - Updated image versions for broker and logger services.
- Minor adjustments and cleanup for service scaling and deployment.

--- a/project/makefile
+++ b/project/makefile
@@ -4,6 +4,7 @@ AUTH_BINARY=authApp
 LOGGER_BINARY=loggerServiceApp
 MAIL_BINARY=mailerApp
 LISTENER_BINARY=listenerApp
+FRONT_BINARY=frontEndApp
 
 ## up: starts all containers in the background without forcing build
 up:
@@ -23,6 +24,12 @@ up_build: build_broker build_auth build_logger build_mail build_listener
 down:
 	@echo "Stopping docker compose..."
 	docker-compose down
+	@echo "Done!"
+
+# build_front_linux: builds the front end binary as a linux executable
+build_front_linux:
+	@echo "Building front end linux binary..."
+	cd ../front-end && env GOOS=linux CGO_ENABLED=0 go build -o ${FRONT_BINARY} ./cmd/web
 	@echo "Done!"
 
 ## build_broker: builds the broker binary as a linux executable
@@ -77,3 +84,17 @@ stop:
 # docker stack deploy -c swarm.yml myapp
 # docker service 
 # docker stack rm myapp
+# docker swarm leave
+# docker swarm leave --force
+
+
+# scale service
+# docker service scale myapp_logger_service=2
+
+# update service
+# docker service update --image najibfikri/go-udemy-logger:1.0.1 myapp_logger_service
+
+
+
+
+
