--- a/project/swarm.yml
+++ b/project/swarm.yml
@@ -1,10 +1,14 @@
 version: "3"
 
 services:
+    front-end:
+        image: najibfikri/go-udemy-front-end:1.0.0
+        deploy:
+            mode: replicated
+            replicas: 1
+
     broker-service:
-        image: najibfikri/go-udemy-broker-service:1.0.0
-        ports:
-            - "8080:80"
+        image: najibfikri/go-udemy-broker-service:1.0.1
         deploy:
             mode: replicated
             replicas: 1
@@ -24,7 +28,7 @@ services:
             DSN: "host=postgres port=5432 user=postgres password=password dbname=users sslmode=disable timezone=UTC connect_timeout=5"
 
     logger-service:
-        image: najibfikri/go-udemy-logger-service:1.0.0
+        image: najibfikri/go-udemy-logger-service:1.0.1
         deploy:
             mode: replicated
             replicas: 1
