feat: update front-end service and integrate Caddy for reverse proxy
- Updated `main.go` in the front-end service:
  - Changed server port from 80 to 8081.
  - Added support for `BROKER_URL` environment variable in templates.
- Updated `test.page.gohtml` to dynamically use `BROKER_URL` for API requests.
- Added `Caddyfile` and `caddy.dockerfile` for reverse proxy setup using Caddy:
  - Configured reverse proxy for front-end and broker services.
  - Added caching and security headers.
- Modified `swarm.yml`:
  - Added a `caddy` service for reverse proxy.
  - Defined external volumes for Caddy data and config.
  - Updated front-end service to use `BROKER_URL` environment variable.
  - Updated image version of front-end and broker services.
- Included new binary for the front-end app.

--- a/project/swarm.yml
+++ b/project/swarm.yml
@@ -1,11 +1,25 @@
 version: "3"
 
 services:
-    front-end:
-        image: najibfikri/go-udemy-front-end:1.0.0
+    caddy:
+        image: najibfikri/go-udemy-micro-caddy:1.0.0
         deploy:
             mode: replicated
             replicas: 1
+        ports:
+            - "80:80"
+            - "443:443"
+        volumes:
+            - caddy_data:/data
+            - caddy_config:/config
+
+    front-end:
+        image: najibfikri/go-udemy-front-end:1.0.1
+        deploy:
+            mode: replicated
+            replicas: 1
+        environment:
+            BROKER_URL: "http://backend"
 
     broker-service:
         image: najibfikri/go-udemy-broker-service:1.0.1
@@ -87,3 +101,8 @@ services:
             POSTGRES_DB: users
         volumes:
             - ./db-data/postgres/:/var/lib/postgresql/data/
+
+volumes:
+    caddy_data:
+        external: true
+    caddy_config:
