feat: add Kubernetes deployment and service configurations
- Added Kubernetes configuration files for:
  - `authentication.yml`: Deployment and Service for the authentication service.
  - `broker.yml`: Deployment and Service for the broker service.
  - `listener.yml`: Deployment and Service for the listener service.
  - `logger.yml`: Deployment and Service for the logger service, with ports for web, RPC, and gRPC.
  - `mail.yml`: Deployment and Service for the mailer service with environment variables for email configuration.
  - `mailhog.yml`: Deployment and Service for the MailHog testing tool.
  - `mongo.yml`: Deployment and Service for MongoDB with environment variables for initialization.
  - `rabbit.yml`: Deployment and Service for RabbitMQ with defined resource limits.

- Updated `.gitignore` to include:
  - `caddy_data`
  - `caddy_config`

--- a/project/makefile
+++ b/project/makefile
@@ -95,6 +95,33 @@ stop:
 # docker service update --image najibfikri/go-udemy-logger:1.0.1 myapp_logger_service
 
 
+# Minikube (kubernetes)
+# minikube start --nodes=2
+# minikube delete
+# minikube start --nodes=2
+# minikube stop
+# minikube start 
+# minikube status
+# minikube dashboard
 
+# kubectl get pods
+# kubectl get pods -A
 
+# kubectl apply -f k8s
+
+# kubectl get svc
+
+# kubectl get deployments
+
+# kubectl apply -f k8s/rabbit.yml
+
+# kubectl logs <pods_name>
+
+# kubectl get deployments
+# kubectl delete deployments broker-service mongo rabbitmq
+# kubectl get deployments
+
+# kubectl get svc
+# kubectl delete svc broker-service mongo rabbitmq
+# kubectl get svc
 
