feat: add Kubernetes configurations for ingress and front-end
- Add `ingress.yml` to configure routing for:
  - Front-end at `front-end.info`
  - Broker-service at `broker-service.info`
- Add Deployment and Service configurations for `front-end`:
  - Deployment with resource limits and environment variable for `BROKER_URL`.
  - Service exposing `front-end` on port 8081.
- Update `makefile` with helper commands for:
  - Managing ingress and services.
  - Enabling Minikube ingress and setting up DNS with `minikube tunnel`.

--- a/project/makefile
+++ b/project/makefile
@@ -125,3 +125,18 @@ stop:
 # kubectl delete svc broker-service mongo rabbitmq
 # kubectl get svc
 
+
+
+
+# kubectl get svc
+# kubectl delete svc broker-service
+# kubectl expose deployment broker-service --type=LoadBalancer --port=8080 --target-port=8080 
+# minikube tunnel
+
+
+
+# minikube addons enable ingress
+# kubectl apply -f ingress.yml
+# kubectl get ingress
+# <add dns to host>
+# minikube tunnel
